--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+                android:id="@+id/relative_layout"
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent" android:layout_height="match_parent"
@@ -11,55 +13,68 @@
             android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="5dp"
             android:textSize="30sp"
             android:textColor="#1BB3AB"
-            android:text="Time Left:"/>
+            android:text="@string/time_left"
+
+    />
 
     <TextView android:id="@+id/time_left_text_view" android:layout_below="@id/title_text_view"
               android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_centerHorizontal="true" android:layout_marginTop="30dp"
+              android:layout_marginBottom="10dp"
               android:textSize="60sp"
               android:textColor="#1BB3AB"
               android:layout_margin="5dp"/>
 
-    <RelativeLayout android:id="@+id/time_picker_layout" android:layout_below="@id/title_text_view"
-                    android:layout_width="wrap_content" android:layout_height="400dp"
-                    android:layout_centerHorizontal="true" android:layout_marginTop="25dp">
-
-        <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
-                android:id="@+id/seconds_picker"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:mnpMaxValue="60"
-                app:mnpMinValue="0"
-                app:mnpEditable="false"
-                app:mnpSeparatorColor="#1BB3AB"
-                app:mnpTextColor="#1BB3AB"
-                app:mnpTextSize="75sp"
-                app:mnpTextStyle="bold"
-                app:mnpValue="10"
-                app:mnpWrapped="true"
-                android:layout_marginTop="5dp" android:scrollbarDefaultDelayBeforeFade="300"
-                android:keepScreenOn="true" android:hapticFeedbackEnabled="true"
-        />
-
-    </RelativeLayout>
 
 
-    <Button android:id="@+id/timer_start_button" android:layout_below="@id/time_picker_layout"
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_input_layout" android:layout_below="@id/time_left_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/text_input_string"
+                android:layout_centerHorizontal="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:focusable="auto">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_edit_text"
+                    android:minWidth="200dp"
+                    android:minHeight="100dp"
+                    android:inputType="number"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                   />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/timer_start_button" android:layout_below="@id/text_input_layout"
             android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:minHeight="75dp"
             android:textSize="20sp"
             android:textColor="#1BB3AB"
             android:background="#3C565E"
             android:layout_centerHorizontal="true"
-            android:text="START TIMER!"/>
+            android:text="START TIMER!"
+            style="@style/Widget.MaterialComponents.Button.TextButton"/>
 
-    <Button android:id="@+id/timer_stop_reset_button" android:layout_below="@id/timer_start_button"
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/timer_stop_reset_button" android:layout_below="@id/timer_start_button"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:minHeight="75dp"
             android:textSize="20sp"
             android:textColor="#1BB3AB"
             android:background="#3C565E"
-            android:layout_centerHorizontal="true" android:layout_marginTop="5dp" />
+            android:layout_centerHorizontal="true" android:layout_marginTop="5dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"/>
 
     <!--<com.google.android.material.button.MaterialButton-->
             <!--android:id="@+id/material_button"-->
