--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -42,9 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="92dp"
             android:layout_marginTop="12dp"
-            android:hint="0 sec"
+            android:hint="0"
             android:textColor="@color/hot_color"
             android:textSize="60sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="40dp"
-            android:hint="0 sec"
+            android:layout_marginEnd="92dp"
+            android:hint="0"
             android:textColor="#1BB3AB"
             android:textSize="60sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
