--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="92dp"
+            android:layout_marginStart="88dp"
             android:layout_marginTop="12dp"
             android:hint="0"
             android:textColor="@color/hot_color"
@@ -145,6 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:background="#3C565E"
@@ -154,7 +155,8 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/timer_stop_reset_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/second_timer_input_layout" />
 
     <!--<com.google.android.material.button.MaterialButton-->
     <!--android:id="@+id/material_button"-->
