--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -117,10 +117,10 @@
             android:focusable="auto"
             android:hint="@string/cool_down"
             app:boxBackgroundColor="@color/cool_color_two"
-            app:layout_constraintStart_toStartOf="@+id/text_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
             app:boxStrokeColor="#000000"
             app:hintTextColor="#000000"
+            app:layout_constraintStart_toStartOf="@+id/text_input_layout"
+            app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
             app:startIconDrawable="@drawable/cold_black_24dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -170,6 +170,30 @@
             app:layout_constraintBottom_toTopOf="@+id/timer_stop_reset_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+            android:id="@+id/button_plus5"
+            android:layout_width="48dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginBottom="31dp"
+            android:text="+5"
+            app:layout_constraintBottom_toTopOf="@+id/timer_start_button"
+            app:layout_constraintEnd_toStartOf="@+id/button_plus10"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/second_timer_input_layout"
+            app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+            android:id="@+id/button_plus10"
+            android:layout_width="58dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginBottom="32dp"
+            android:text="+10"
+            app:layout_constraintBottom_toTopOf="@+id/timer_start_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/second_timer_input_layout" />
 
     <!--<com.google.android.material.button.MaterialButton-->
     <!--android:id="@+id/material_button"-->
